[package]
name = "blk_count_macro"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["count", "macro", "const", "blk_count"]
categories = ["no-std", "rust-patterns"]
description = "A simple macro for counting a number of comma-separated tokens at compile time"
repository = "https://github.com/sigurd4/blk_count_macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
